my-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace:  4al1-groupe-2
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      labels:
        io.kompose.service: web
    spec:
      containers:
        - name: web
          image: ari1008/web-aristide
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
