my-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: 4al1-groupe-2
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
