my-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: 4al1-groupe-2
  labels:
    app.kubernetes.io/component: controller
  name: 4al1-gr2
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 4al1-gr2
  namespace: 4al1-groupe-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: 4al1-gr2
  tls:
    - hosts:
        - backend.al1.groupe2.jbienvenu.fr
      secretName: letsencrypt-staging-4al1-gr2
  rules:
    - host: backend.al1.groupe2.jbienvenu.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web
                port:
                  number: 8000
